[package]
name = "gandi-rs"
version = "0.1.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
categories = ["web-programming::http-client", "command-line-interface"]
description = """Alternative Gandi API Client."""
license = "BSD-2-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gandi"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.102"
serde_json = "1.0.41"
lazy_static = "1.4.0"
serde_yaml = "0.8.11"
colored = "1.8.0"

[dependencies.reqwest]
version = "0.9.22"
default-features = false
features = ["rustls-tls"]
